[package]
name = "aez"
version = "0.0.6"
edition = "2018"
authors = ["David Stainton <dawuud@riseup.net>"]
description = "Rust wrapper for AEZ wide block cipher written in C."
homepage = "https://github.com/sphinx-cryptography/aez"
repository = "https://github.com/sphinx-cryptography/aez"
documentation = "https://docs.rs/aez/"
readme = "README.md"
keywords = ["cryptography", "aez", "ffi", "sprp"]
license = "AGPL-3.0-only"
links = "aez"
build = "build.rs"

[dev-dependencies.criterion]
git = "https://github.com/james-darkfox/criterion.rs"
branch = "cycles"
features = ["cycles"]

[[bench]]
name = "aez"
harness = false
